--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Fuel_Calculator</string>
+    <string name="ex_1_80">Ex:1.80</string>
+    <string name="consumo_do_veiculo">Consumo do veiculo</string>
+    <string name="proximo">Proximo</string>
 </resources>
